--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tweenjs/tween.js": "^18.6.4",
-    "three": "^0.146.0"
+    "three": "^0.146.0",
+    "three.interactive": "^1.7.0"
   }
 }
